<resources>
    <string name="app_name">NeRecipe</string>
    <string name="nerecipe">NeRecipe</string>
    <string name="avatar_description">Author avatar</string>
    <string name="author">Author</string>
    <string name="category">Russian</string>
    <string name="demo">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу.</string>
    <string name="recipe_step">Step description</string>
    <string name="likesCount">9999</string>
    <string name="sharesCount">999</string>
    <string name="viewsCount">99</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_edit_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="add_recipe">Add</string>
    <string name="steps_description">Cooking description</string>
    <string name="video_cover">Video cover</string>
    <string name="chooser_play_video">Play video</string>
    <string name="post_avatar">Post avatar</string>
    <string name="recipe_description">Recipe description</string>
    <string name="step">Step</string>
    <string name="recipe_title">Title</string>
    <string name="stepAfterDescription">Step after</string>
    <string name="stepEdit">Steps edit</string>
    <string name="steps_button">Steps</string>
    <string name="stepBeforeDescription">Step before</string>
    <string name="European">European</string>
    <string name="Asian">Asian</string>
    <string name="PanAsian">PanAsian</string>
    <string name="Eastern">Eastern</string>
    <string name="American">American</string>
    <string name="Russian">Russian</string>
    <string name="Mediterranean">Mediterranean</string>
    <string name="spinner_name">Category</string>
    <string name="stepsDescriptionText">Steps description</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="apply_filters">Apply</string>
    <string-array name="category_array">
        <item>European</item>
        <item>Asian</item>
        <item>PanAsian</item>
        <item>Eastern</item>
        <item>American</item>
        <item>Russian</item>
        <item>Mediterranean</item>
    </string-array>
    <string name="id">Id</string>
    <string name="step_time">Step time</string>
    <string name="save_recipe">Save recipe</string>
    <string name="current_step">Current step</string>
    <string name="add_step">Add step</string>
    <string name="save_step">Save step</string>
    <string name="cooking_step">Cooking steps</string>
    <string name="firsStepsDescriptionText">First step description</string>
</resources>