<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Home"
        android:drawable="@color/black"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:drawable="@color/black"
        android:icon="@drawable/ic_baseline_favorite_border_24dp"
        android:title="@string/favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter"
        android:drawable="@color/black"
        android:icon="@drawable/ic_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/add"
        android:drawable="@color/black"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/add_recipe"
        app:showAsAction="never" />
</menu>
