<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/pic_dimens"
        android:layout_height="@dimen/pic_dimens"
        android:layout_marginStart="@dimen/min_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:contentDescription="@string/post_avatar"
        android:src="@drawable/ic_outline_dining_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:gravity="center"
        android:hint="@string/author"
        app:layout_constraintBottom_toTopOf="@+id/categorySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_chainStyle="spread" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:entries="@array/category_array"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@id/barrierRecipeHeadContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/category" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:autoLink="web"
        android:gravity="center"
        android:hint="@string/recipe_title"
        android:padding="2dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierRecipeHeadContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:gravity="center"
        android:hint="@string/recipe_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierRecipeHeadContent"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierStepHeadContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_spacing"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="description" />

    <Button
        android:id="@+id/edit_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_spacing"
        android:text="@string/stepEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierStepHeadContent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_ok_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>