<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/pic_dimens"
        android:layout_height="@dimen/pic_dimens"
        android:layout_marginStart="@dimen/min_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:contentDescription="@string/post_avatar"
        android:src="@drawable/ic_outline_dining_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/author" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/likesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/category" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:autoLink="web"
        android:ellipsize="marquee"
        android:padding="2dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/recipe_title"
        tools:textSize="24dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesButton"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:checkable="true"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/category" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likesButton"
        app:layout_constraintStart_toEndOf="@id/likesButton"
        app:layout_constraintTop_toTopOf="@id/likesButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cookingTimeCount"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/min_spacing"
        app:icon="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="@id/likesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likesButton"
        tools:text="~1h" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierRecipeHeadContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,likesButton,shareButton,cookingTimeCount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/recipeDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/min_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:layout_marginEnd="@dimen/min_spacing"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/stepsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierRecipeHeadContent"
        tools:text="@string/recipe_description" />


    <Button
        android:id="@+id/stepsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>