<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">


    <ImageView
        android:id="@+id/stepPic"
        android:layout_width="@dimen/pic_dimens"
        android:layout_height="@dimen/pic_dimens"
        android:layout_marginStart="@dimen/min_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:contentDescription="@string/post_avatar"
        android:src="@drawable/ic_outline_dining_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stepNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/stepTime"
        app:layout_constraintStart_toEndOf="@id/stepPic"
        app:layout_constraintTop_toTopOf="@id/stepTime"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/step" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/step_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/stepTime"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/min_spacing"
        app:icon="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toTopOf="@id/barrierRecipeHeadContent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="~1h" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierRecipeHeadContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="stepPic" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stepDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierRecipeHeadContent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/recipe_step" />

</androidx.constraintlayout.widget.ConstraintLayout>