<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/min_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:contentDescription="@string/post_avatar"
        android:src="@drawable/ic_launcher_stove_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@id/barrierContentBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/min_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:autoLink="web"
        android:padding="2dp"
        android:text="@string/content"
        app:layout_constraintBottom_toTopOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContentBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, category" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesButton"
        style="@style/Widget.AppTheme.LikeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierContentBottom"
        tools:text="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likesButton"
        app:layout_constraintStart_toEndOf="@id/likesButton"
        app:layout_constraintTop_toBottomOf="@id/barrierContentBottom"
        app:layout_constraintTop_toTopOf="@id/likesButton"
        tools:text="2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cookingTimeCount"
        style="@style/Widget.AppTheme.ShareAndViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/min_spacing"
        app:icon="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="@id/likesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierContentBottom"
        app:layout_constraintTop_toTopOf="@id/likesButton"
        tools:text="~1h" />

</androidx.constraintlayout.widget.ConstraintLayout>